# augur

./: CI.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml  review.yml
src/: cli.rs  github.rs  lib.rs  llm.rs  main.rs  review.rs
src/agent/: mod.rs
src/diff/: mod.rs
src/git/: diff.rs  mod.rs  repo.rs
src/tools/: mod.rs
tests/: git_integration.rs
